deploy-sample/06-deployment-sin-vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ifconfig
  annotations:
    field.cattle.io/description: test deployment over rancher downstream cluster
  labels:
    app.kubernetes.io/name: ifconfig
    app: ifconfig  
  namespace: ifconfig
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ifconfig
      app: ifconfig  
  replicas: 2
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ifconfig
        app: ifconfig  
      namespace: ifconfig
      annotations:
    spec:
      # to let access to vault secrets
      containers:
        - name: ifconfig
          imagePullPolicy: IfNotPresent
          image: georgyo/ifconfig.io:latest
          securityContext:
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            privileged: false
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
              protocol: TCP
